# ace-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
ace_core/: .env.example  README.md  __init__.py  llm.py  logger.py  playbook_utils.py  requirements.txt  utils.py
ace_core/ace/: __init__.py  ace.py
ace_core/finance/: data_processor.py  run.py
ace_platform/: __init__.py  config.py
ace_platform/api/: auth.py  deps.py  main.py  middleware.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPLENTATION_PLAN_CRITIQUES.md  MCP_INTEGRATION.md  QUICKSTART.md
playbooks/: coding_agent.md
scripts/: deploy-api.sh  deploy-mcp.sh  deploy-postgres.sh  deploy-redis.sh  deploy-workers.sh  setup-secrets.sh  test-mcp-integration.sh
tests/: conftest.py  test_api_app.py  test_api_key_auth.py  test_api_key_routes.py  test_auth_middleware.py  test_auto_evolution.py  test_billing_routes.py  test_billing_service.py  test_celery_app.py  test_e2e_billing_flow.py  test_e2e_full_flow.py  test_evolution.py  test_evolution_idempotency.py  test_evolution_task.py  test_health.py  test_jwt_auth.py  test_limits.py  test_llm_proxy.py  test_logging.py  test_mcp_server.py  test_metering.py  test_middleware.py  test_playbook_routes.py  test_rate_limit.py  test_seed.py  test_stripe_config.py  test_subscription_checks.py  test_usage_routes.py  test_validation.py  test_webhooks.py
(+41 files in other folders)
