[project]
name = "ace-platform"
version = "0.1.0"
description = "Hosted ACE platform for self-improving AI agents"
requires-python = ">=3.10"

dependencies = [
    # From upstream ACE
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    
    # Your platform dependencies
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "stripe>=8.0.0",
    "mcp>=0.1.0",  # Check actual package name
    "celery>=5.3.0",  # For background jobs
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]